17-Jan-2012 Improved debugging messages while attaching update delegates to modules's UpdateOptions event.

17-Jan-2012 Gcc compiler, archiver and linker supports response files.

16-Jan-2012 Adding a WindowsSDK version 'VC8PlatformSDK' that is the PlatformSDK within the VisualStudio 2005 installation folder.

16-Jan-2012 VisualC compiler, archiver and linker supports response files.

16-Jan-2012 Added new interface, Opus.Core.IToolSupportsResponseFile, that requires a tool to provide the response file argument.
            CommandLineProcessor package uses this to write the options usually passed directly to the tool, to the response file instead, and make use of it.

15-Jan-2012 Qt.IMocOptions now exposes a PathPrefix option (moc -p <path>)

15-Jan-2012 Modules at the top-level namespace were duplicated even though they were used as fields for another top-level module.

15-Jan-2012 Dependency graph generation used to be able to create multiple DependencyNodes for a single IModule's child dependencies.

14-Jan-2012 QMakeBuilder now distinguishes between QMAKE_CFLAGS and QMAKE_CXXFLAGS.

14-Jan-2012 Gcc and Mingw, -Wall and -Wextra are set first on the command line so that subsequent warning disables work.

14-Jan-2012 QMake .pro files now have QMAKE_CC, QMAKE_CXX, QMAKE_LINK and QMAKE_MOC variables set.

14-Jan-2012 The IgnoreStandardIncludePaths C compiler option really doesn't inject the compiler include paths. VisualC is different, as it assumes an environment is set up.

14-Jan-2012 Added Qt moc support for QMakeBuilder.

14-Jan-2012 Fixing VSSolutionBuilder for .vcxprojs for header files with custom build steps not appearing under the Header Files filter in the solution explorer.

14-Jan-2012 Added Qt moc support for the VSSolutionBuilder, for both .vcproj and .vcxproj.
